# snag

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  rules
docs/: index.html  install.sh
man/: snag.1
pkg/aur/: PKGBUILD
pkg/brew/: snag.rb
src/: app.rs  config.rs  discovery.rs  e2e_tests.rs  headless.rs  main.rs  qr.rs  relay_server.rs  share_code.rs  state.rs  updater.rs
src/crypto/: bulk.rs  keys.rs  mod.rs  stream.rs  verify.rs
src/network/: connection.rs  listener.rs  mod.rs  nat.rs  traversal.rs
src/protocol/: catalog.rs  handshake.rs  messages.rs  mod.rs
src/transfer/: chunker.rs  manager.rs  mod.rs  receiver.rs  sender.rs
src/ui/: code_input.rs  fetch_view.rs  file_browser.rs  help_overlay.rs  host_view.rs  limit_overlay.rs  main_menu.rs  mod.rs  settings_overlay.rs  theme.rs
src/ui/widgets/: file_list.rs  mod.rs  status_bar.rs  transfer_bar.rs
